# promobot-reports

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: .env.example  main.py  pyproject.toml  save_models.py
backend/database/: groups.json  init_db.py  init_db.sql
backend/domain/: address.py  address_query.py  message.py  processed_message.py  router.py  rule.py
backend/main/: dependencies.py  main.py  routes.py  schemas.py  settings.py
backend/main/classification/: dummy_predict_group_topic.py  dummy_predict_is_trash.py  predict_group_topic.py  predict_is_trash.py
backend/main/domain/: address.py  message.py  processed_message.py  router.py  rule.py
backend/main/ner/: extract_address.py
backend/main/repositories/: processed_message_repository.py  router_repository.py  unit_of_work.py
backend/main/services/: processed_messages_service.py  router_service.py
backend/ner/: extract_address.py
backend/repositories/: ProcessedMessageRepository.py  RouterRepository.py  processed_message_repository.py  router_repository.py
backend/services/: processed_messages_service.py  router_service.py
docker/backend/: Dockerfile-backend  Dockerfile-backend.dockerignore
docker/frontend/: Dockerfile-frontend
frontend/: .env.example  index.html  package-lock.json  package.json
frontend/router/: Route.svelte  Router.svelte
frontend/src/: App.svelte  Index.svelte  Predict.svelte  Results.svelte  Settings.svelte  main.js
ner/: extract_address.py  hack.ipynb
