[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["daniil7 <daniil.k@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.104.1"
natasha = "^1.6.0"
aiosqlite = "^0.19.0"
uvicorn = "^0.24.0.post1"
pydantic-settings = "^2.1.0"
python-Levenshtein = "^0.23.0"
torch = {version = "^2.1.1+cpu", source = "torch_cpu"}
transformers = "^4.35.2"

[[tool.poetry.source]]
name = "torch_cpu"
url = "https://download.pytorch.org/whl/cpu/"
priority = "supplemental"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
